@@ -2,6 +2,9 @@
 CHANGE LOG
 =========================================================================
 
+2008-03-22 Warren L. DeLano <warren@delsci.com>	
+
+	* Fixed bugs with label sizes & positions in orthoscopic mode
 
 2008-03-22 Warren L. DeLano <warren@delsci.com>	
 
